Fixes for dropdown menus and always visible hamburger

--- a/src/header/css/header.pcss
+++ b/src/header/css/header.pcss
@@ -20,6 +20,12 @@
 		width: 1440px;
 		max-width: 96vw;
 		margin: 0 auto;
+
+		&.-always-hamburger {
+			width: 100%;
+			max-width: 100vw;
+		}
+
 		@media (--width-sm) {
 			padding-left: 0;
 			padding-right: 0;
